--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,40 +15,45 @@ android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="ПЕНТА"
 android:textSize="24sp"
-android:layout_alignParentTop="true"
-android:layout_centerHorizontal="true"
+app:layout_constraintTop_toTopOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
 android:layout_marginTop="50dp"/>
 
     <!-- Кнопка Заказ -->
 <Button
 android:id="@+id/btnOrder"
-android:layout_width="match_parent"
+android:layout_width="0dp"
 android:layout_height="100dp"
-    android:text="Заказ"
-    android:layout_below="@id/textViewTitle"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="50dp"
-    android:background="@color/main_button"/>
+android:text="Заказ"
+app:layout_constraintTop_toBottomOf="@id/textViewTitle"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+android:layout_marginTop="50dp"
+android:background="@color/main_button"/>
 
     <!-- Кнопка Инфо -->
 <Button
 android:id="@+id/btnInfo"
-android:layout_width="match_parent"
+android:layout_width="0dp"
 android:layout_height="100dp"
-    android:text="Инфо"
-    android:layout_below="@id/btnOrder"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="20dp"
-    android:background="@color/main_button"/>
+android:text="Инфо"
+app:layout_constraintTop_toBottomOf="@id/btnOrder"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+android:layout_marginTop="20dp"
+android:background="@color/main_button"/>
 
-    <Button
-        android:id="@+id/btnChat"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:text="Чат"
-        android:layout_below="@id/btnInfo"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="20dp"
-    android:background="@color/main_button"/>
+    <!-- Кнопка Чат -->
+<Button
+android:id="@+id/btnChat"
+android:layout_width="0dp"
+android:layout_height="100dp"
+android:text="Чат"
+app:layout_constraintTop_toBottomOf="@id/btnInfo"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+android:layout_marginTop="20dp"
+android:background="@color/main_button"/>
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
