--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,94 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:background="@color/salad_color"
     tools:context=".MainActivity">
 
-    <!-- Заголовок "ПЕНТА" -->
-<TextView
-android:id="@+id/textViewTitle"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="ПЕНТА"
-android:textSize="24sp"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-android:layout_marginTop="50dp"/>
+    <!-- Верхняя часть страницы с лого -->
+    <View
+        android:id="@+id/viewTop"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/main_toolbar_color"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guideline" />
 
-    <!-- Кнопка Заказ -->
-<Button
-android:id="@+id/btnOrder"
-android:layout_width="0dp"
-android:layout_height="100dp"
-android:text="Заказ"
-app:layout_constraintTop_toBottomOf="@id/textViewTitle"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-android:layout_marginTop="50dp"
-android:background="@color/main_button"/>
+    <!-- Guideline для разделения на 1/4 -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="203dp" />
 
-    <!-- Кнопка Инфо -->
-<Button
-android:id="@+id/btnInfo"
-android:layout_width="0dp"
-android:layout_height="100dp"
-android:text="Инфо"
-app:layout_constraintTop_toBottomOf="@id/btnOrder"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-android:layout_marginTop="20dp"
-android:background="@color/main_button"/>
+    <!-- Картинка в центре -->
+    <ImageView
+        android:id="@+id/imageViewCenter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_penta_logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"/>
 
-    <!-- Кнопка Чат -->
-<Button
-android:id="@+id/btnChat"
-android:layout_width="0dp"
-android:layout_height="100dp"
-android:text="Чат"
-app:layout_constraintTop_toBottomOf="@id/btnInfo"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-android:layout_marginTop="20dp"
-android:background="@color/main_button"/>
+    <Button
+    android:id="@+id/btnOrder"
+    style="@style/GreenButtonStyle"
+    android:layout_width="0dp"
+    android:layout_height="100dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginTop="48dp"
+    android:layout_marginEnd="32dp"
+    android:paddingStart="20dp"
+    android:drawableStart="@drawable/ic_call"
+    android:drawablePadding="1dp"
+    android:text="@string/order"
+    android:textSize="36sp"
+    android:gravity="center"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/guideline" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btnInfo"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:text="@string/info"
+        app:layout_constraintTop_toBottomOf="@id/btnOrder"
+        app:layout_constraintStart_toStartOf="@id/btnOrder"
+        app:layout_constraintEnd_toEndOf="@id/btnOrder"
+        android:layout_marginTop="48dp"
+        android:paddingStart="20dp"
+        style="@style/GreenButtonStyle"
+        android:drawableStart="@drawable/ic_info_with_circle"
+        android:drawablePadding="1dp"
+        android:textSize="36sp"
+    android:gravity="center"
+    />
+
+    <Button
+        android:id="@+id/btnChat"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:text="@string/chat"
+        app:layout_constraintTop_toBottomOf="@id/btnInfo"
+        app:layout_constraintStart_toStartOf="@id/btnInfo"
+        app:layout_constraintEnd_toEndOf="@id/btnInfo"
+        android:layout_marginTop="48dp"
+        android:paddingStart="20dp"
+        style="@style/GreenButtonStyle"
+        android:drawableStart="@drawable/nicubunu_callout_round_right"
+        android:drawablePadding="8dp"
+        android:textSize="36sp"
+    android:gravity="center"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
