Навел порядок с правильной работой цветов и стилей на данный момент.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Penta" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="MyTheme" parent="Theme.Penta">
+        <item name="android:windowBackground">@color/my_background_color</item>
     </style>
     <!-- Для темной темы ToolBar-->
     <style name="ToolbarStyle.Dark" parent="Widget.MaterialComponents.Toolbar.Primary">
