--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="main_toolbar_color">#84A98C</color>
     <color name="salad_color">#CAD2C5</color>
     <color name="green_button">#52796F</color>
+    <color name="my_background_color">#52796F</color>
 
     <!-- Цвета страницы Заказ -->
     <color name="colorPrimary">#B74A4A</color>
