--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Penta" parent="Theme.Material3.DayNight.NoActionBar">
-    </style>
 
     <!-- Для светлой темы ToolBar-->
     <style name="ToolbarStyle.Light" parent="Widget.MaterialComponents.Toolbar.Primary">
         <item name="android:textColorPrimary">@android:color/black</item>
+    </style>
+
+    <style name="MyTheme" parent="Theme.Penta">
+        <item name="android:textColor">@color/my_text_color</item>
+        <item name="android:buttonTint">@color/my_button_color</item>
+        <item name="android:windowBackground">@color/my_background_color</item>
     </style>
 
     <style name="Theme.Penta" parent="Base.Theme.Penta" />
