--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,29 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductInfoActivity">
-
-    <!-- Добавляем Toolbar -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+    android:background="@drawable/line_1">
 
     <!-- Заголовок "Информация по продуктам" -->
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Информация по продуктам"
-        android:textSize="20sp"
+        android:text="Услуги"
+        android:textSize="48sp"
         android:textStyle="bold"
-        android:layout_below="@id/toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="30dp" />
 
     <!-- Контейнер для кнопок -->
     <LinearLayout
@@ -33,45 +24,96 @@
         android:layout_below="@id/textViewTitle"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="16dp"
         android:gravity="center">
 
-        <!-- Добавляем кнопки для перехода к дополнительной информации -->
-        <Button
-            android:id="@+id/buttonInfo1"
-            android:layout_width="wrap_content"
+        <GridLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Полиуретановая пленка"
-            android:layout_marginTop="8dp" />
+            android:columnCount="2"
+            android:rowCount="5"
+            android:orientation="horizontal"
+            android:layout_below="@id/textViewTitle"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:columnOrderPreserved="false">
 
-        <Button
-            android:id="@+id/buttonInfo2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Керамическое покрытие"
-            android:layout_marginTop="8dp" />
+            <!-- Добавляем кнопки для перехода к дополнительной информации -->
 
-        <Button
-            android:id="@+id/buttonInfo3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Полировальные системы"
-            android:layout_marginTop="8dp" />
+            <Button
+                android:id="@+id/buttonInfo1"
+                style="@style/GreenButtonStyle"
+                android:layout_width="158dp"
+                android:layout_height="99dp"
+                android:layout_row="0"
+                android:layout_rowSpan="1"
+                android:layout_column="0"
+                android:layout_columnSpan="1"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="8dp"
+                android:text="Полиуретановая пленка" />
 
-        <Button
-            android:id="@+id/buttonInfo4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Защита салона автомобиля"
-            android:layout_marginTop="8dp" />
+            <Button
+                android:id="@+id/buttonInfo2"
+                style="@style/GreenButtonStyle"
+                android:layout_columnSpan="1"
+                android:layout_rowSpan="1"
+                android:text="Керамическое покрытие"
+                android:layout_width="158dp"
+                android:layout_height="158dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="21dp" />
 
-        <Button
-            android:id="@+id/buttonInfo5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Антидождь и защита ткани"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp" />
+            <Button
+                android:id="@+id/buttonInfo3"
+                style="@style/GreenButtonStyle"
+                android:layout_columnSpan="1"
+                android:layout_rowSpan="1"
+                android:text="Полировальные системы"
+                android:layout_width="158dp"
+                android:layout_height="99dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="15dp" />
+
+            <Button
+                android:id="@+id/buttonInfo4"
+                style="@style/GreenButtonStyle"
+                android:layout_columnSpan="1"
+                android:layout_rowSpan="2"
+                android:text="Защита салона автомобиля"
+                android:layout_width="158dp"
+                android:layout_height="158dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="21dp" />
+
+            <Button
+                android:id="@+id/buttonInfo5"
+                style="@style/GreenButtonStyle"
+                android:layout_columnSpan="1"
+                android:layout_rowSpan="2"
+                android:text="Антидождь и защита ткани"
+                android:layout_width="158dp"
+                android:layout_height="99dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="21dp" />
+
+        </GridLayout>
     </LinearLayout>
+
+    <!-- Добавляем изображение penta_logo_pink -->
+    <ImageView
+        android:id="@+id/imageViewCenter"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="66dp"
+        android:src="@drawable/penta_logo_pink" />
+
 </RelativeLayout>
