--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="colorPrimaryDark">#8A47DE</color>
     <color name="colorAccent">#CAD2C5</color>
 
-    <color name="color_button_chat">#572FDD</color>572FDD
+    <color name="color_button_chat">#572FDD</color>
 
     <!-- Цвета Для кнопки в Main -->
     <color name="button_normal_color">#FF4081</color>
