--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
     </style>
 
     <!-- Добавляем стиль для кнопок -->
-    <style name="GreenButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="infoButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/button_background</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
