--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,16 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/line_1"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <!-- Заголовок "Информация по продуктам" -->
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Услуги"
+        android:text="Инфо"
         android:textColor="#1B1B1E"
         android:textSize="48sp"
         android:textStyle="bold"
@@ -18,79 +19,62 @@
         android:layout_marginTop="30dp" />
 
     <!-- Контейнер для кнопок -->
-    <GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:rowCount="5"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_below="@id/textViewTitle"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:columnOrderPreserved="false">
+        android:gravity="center">
 
         <!-- Добавляем кнопки для перехода к дополнительной информации -->
 
         <Button
             android:id="@+id/buttonInfo1"
             style="@style/infoButtonStyle"
-            android:layout_width="135dp"
-            android:layout_height="99dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Полиуретановая пленка"
             android:textAllCaps="false"
-            android:layout_gravity="center" />
+            android:layout_marginBottom="16dp" />
 
         <Button
             android:id="@+id/buttonInfo2"
             style="@style/infoButtonStyle"
-            android:layout_columnSpan="1"
-            android:layout_rowSpan="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Керамическое покрытие"
             android:textAllCaps="false"
-            android:layout_width="158dp"
-            android:layout_height="158dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginStart="21dp"
-            android:layout_alignTop="@id/buttonInfo1"
-            android:layout_gravity="center" />
+            android:layout_marginBottom="16dp" />
 
         <Button
             android:id="@+id/buttonInfo3"
             style="@style/infoButtonStyle"
-            android:layout_width="133dp"
-            android:layout_height="99dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Полировальные системы"
             android:textAllCaps="false"
-            android:layout_gravity="center" />
+            android:layout_marginBottom="16dp" />
 
         <Button
             android:id="@+id/buttonInfo4"
             style="@style/infoButtonStyle"
-            android:layout_columnSpan="1"
-            android:layout_rowSpan="2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Защита салона автомобиля"
             android:textAllCaps="false"
-            android:layout_width="158dp"
-            android:layout_height="158dp"
-            android:layout_marginTop="61dp"
-            android:layout_marginStart="21dp"
-            android:layout_gravity="center" />
+            android:layout_marginBottom="16dp" />
 
         <Button
             android:id="@+id/buttonInfo5"
             style="@style/infoButtonStyle"
-            android:layout_width="133dp"
-            android:layout_height="99dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Антидождь и защита ткани"
-            android:textAllCaps="false"
-            android:layout_gravity="center" />
+            android:textAllCaps="false" />
 
-    </GridLayout>
+    </LinearLayout>
 
     <!-- Добавляем изображение penta_logo_pink -->
     <ImageView
@@ -99,10 +83,7 @@
         android:layout_height="120dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="66dp"
         android:src="@drawable/penta_logo_pink" />
-
 
 </RelativeLayout>
