--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,118 +1,77 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/line_order_beckground"
+    android:background="@drawable/line_order_background"
     tools:context=".OrderActivity">
 
-    <RelativeLayout
-        android:id="@+id/container"
+    <TextView
+        android:id="@+id/tvOrderTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Заказ"
+        android:textColor="#1B1B1E"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
+
+    <!-- Выпадающий список для выбора компании -->
+    <Spinner
+        android:id="@+id/spinnerCompanies"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_centerInParent="true">
+        android:layout_below="@id/tvOrderTitle"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp" />
 
-        <!-- Кнопка выбора Заказа -->
-        <Button
-            android:id="@+id/btnSelectCompany"
-            android:layout_width="279dp"
-            android:layout_height="54dp"
-            android:text="Выбирите себя"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:drawableRight="@drawable/polygon_1"
-            android:paddingRight="16dp"
-            android:background="@drawable/button_purple_rounded"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="60dp"/>
+    <!-- Поле для ввода даты -->
+    <EditText
+        android:id="@+id/etDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinnerCompanies"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:hint="Введите дату (дд.мм.гггг)"
+        android:inputType="date" />
 
-        <!-- Кнопка выбора Работ -->
-        <Button
-            android:id="@+id/btnSelectWork"
-            android:layout_width="279dp"
-            android:layout_height="54dp"
-            android:text="Вид работ"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:drawableRight="@drawable/polygon_1"
-            android:paddingRight="16dp"
-            android:background="@drawable/button_purple_rounded"
-            android:layout_below="@id/btnSelectCompany"
-            android:layout_alignStart="@id/btnSelectCompany"
-            android:layout_alignEnd="@id/btnSelectCompany"
-            android:layout_marginTop="24dp"/>
+    <!-- Выпадающий список для выбора работ -->
+    <Spinner
+        android:id="@+id/spinnerWorks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etDate"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp" />
 
-        <!-- Кнопка выбора Даты -->
-        <Button
-            android:id="@+id/btnSelectDate"
-            android:layout_width="279dp"
-            android:layout_height="54dp"
-            android:text="Дата работ"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:drawableRight="@drawable/polygon_1"
-            android:paddingRight="16dp"
-            android:background="@drawable/button_purple_rounded"
-            android:layout_below="@id/btnSelectWork"
-            android:layout_alignStart="@id/btnSelectWork"
-            android:layout_alignEnd="@id/btnSelectWork"
-            android:layout_marginTop="24dp"/>
+    <!-- EditText для ввода марки автомобиля -->
+    <EditText
+        android:id="@+id/etCarModel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinnerWorks"
+        android:hint="Введите марку и модель"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp" />
 
-        <!-- Кнопка выбора Марки-->
-        <Button
-            android:id="@+id/btnSelectCarModel"
-            android:layout_width="279dp"
-            android:layout_height="54dp"
-            android:text="Марка автомобиля"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            android:drawableRight="@drawable/polygon_1"
-            android:paddingRight="16dp"
-            android:background="@drawable/button_purple_rounded"
-            android:layout_below="@id/btnSelectDate"
-            android:layout_alignStart="@id/btnSelectDate"
-            android:layout_alignEnd="@id/btnSelectDate"
-            android:layout_marginTop="24dp"/>
-
-        <!-- EditText для ввода марки автомобиля -->
-        <EditText
-            android:id="@+id/etCarModel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/btnSelectCarModel"
-            android:layout_alignStart="@id/btnSelectCarModel"
-            android:layout_alignEnd="@id/btnSelectCarModel"
-            android:layout_marginTop="8dp"/>
-
-        <!-- Кнопка подтверждения заказа -->
-        <Button
-            android:id="@+id/btnConfirmOrder"
-            android:layout_width="279dp"
-            android:layout_height="54dp"
-            android:text="Подтвердить заказ"
-            android:textAllCaps="false"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:background="@drawable/button_yellow_rounded"
-            android:layout_below="@id/etCarModel"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"/>
-
-        <!-- Penta Logo -->
-        <ImageView
-            android:id="@+id/pentaLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/penta_logo_pink"
-            android:layout_below="@id/btnConfirmOrder"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"/>
-
-    </RelativeLayout>
+    <!-- Кнопка подтверждения заказа -->
+    <Button
+        android:id="@+id/btnConfirmOrder"
+        android:layout_width="279dp"
+        android:layout_height="54dp"
+        android:text="Подтвердить заказ"
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:background="@drawable/button_yellow_rounded"
+        android:layout_below="@id/etCarModel"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
 
 </RelativeLayout>
