--- a/app/src/main/res/layout/activity_product_info_1.xml
+++ b/app/src/main/res/layout/activity_product_info_1.xml
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!-- Toolbar -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_height="match_parent"
+    android:background="@drawable/line_4_2">
 
     <!-- Заголовок -->
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Керамика"
-        android:textSize="24sp"
+        android:text="Полиуретановая пленка"
+        android:textColor="#201E1E"
+        android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="45dp" />
 
     <!-- Фото -->
     <ImageView
@@ -34,7 +26,8 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/demo_foto_info"
+        android:src="@drawable/membrane_film"
+        android:background="@drawable/rounded_corners"
         app:layout_constraintTop_toBottomOf="@id/textTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,11 +40,28 @@
         android:id="@+id/textDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Nasiol ZR53 9Н ultimate nano car paint protection является новейшей профессиональной нано разработкой для защиты вашего автомобиля от повреждений и защитой от всех химических и природных воздействий, придания высоких гидрофобных свойств и придания превосходного блеска на долгое время. Легко наносится на поверхность и обеспечивает 3 года прочной сверхстойкой нанокерамической защиты."
+        android:text="Membrane TPU XSide Gloss — высококачественная полиуретановая антигравийная самоклеящаяся плёнка c лаковым слоем средней жёсткости.
+
+Предназначена для надёжной и долговременной защиты кузова автомобиля от сколов, царапин, птичьего помёта, насекомых, кислот, выцветания, битумных пятен и других агрессивных факторов, приводящих к повреждению ЛКП.
+Толщина 195 мкм
+Гарантия 7 лет"
         android:padding="16dp"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
         app:layout_constraintTop_toBottomOf="@id/imageCover"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp" /> <!-- Увеличенный отступ сверху -->
+        android:layout_marginTop="24dp" />
+
+    <!-- Логотип -->
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="187dp"
+        android:layout_height="113dp"
+        android:layout_marginTop="65dp"
+        android:src="@drawable/penta_logo_pink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
