--- a/app/src/main/res/layout/activity_product_info_2.xml
+++ b/app/src/main/res/layout/activity_product_info_2.xml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!-- Toolbar -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_height="match_parent"
+    android:background="@drawable/line_4_2">
 
     <!-- Заголовок -->
     <TextView
-        android:id="@+id/textTitle2"
+        android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Керамика"
-        android:textSize="24sp"
+        android:textColor="#201E1E"
+        android:textSize="35sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="45dp" />
 
     <!-- Фото -->
     <ImageView
-        android:id="@+id/imageCover2"
+        android:id="@+id/imageCover"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/demo_foto_info"
-        app:layout_constraintTop_toBottomOf="@id/textTitle2"
+        android:src="@drawable/zr53"
+        android:background="@drawable/rounded_corners"
+        app:layout_constraintTop_toBottomOf="@id/textTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="16dp"
@@ -44,14 +37,27 @@
 
     <!-- Описание -->
     <TextView
-        android:id="@+id/textDescription2"
+        android:id="@+id/textDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Nasiol ZR53 9Н ultimate nano car paint protection является новейшей профессиональной нано разработкой для защиты вашего автомобиля от повреждений и защитой от всех химических и природных воздействий, придания высоких гидрофобных свойств и придания превосходного блеска на долгое время. Легко наносится на поверхность и обеспечивает 3 года прочной сверхстойкой нанокерамической защиты."
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/imageCover2"
+        android:paddingStart="32dp"
+        android:paddingEnd="32dp"
+        app:layout_constraintTop_toBottomOf="@id/imageCover"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp" /> <!-- Увеличенный отступ сверху -->
+        android:layout_marginTop="24dp" />
+
+    <!-- Логотип -->
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="187dp"
+        android:layout_height="113dp"
+        android:layout_marginTop="65dp"
+        android:src="@drawable/penta_logo_pink"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
